# learnxnu

./: README.md
demos/whitepaper/: .gitignore  01_process_ids  01_process_ids.c  02_file_basic  02_file_basic.c  03_file_at  03_file_at.c  04_memory_mmap  04_memory_mmap.c  05_pipe_fcntl  05_pipe_fcntl.c  06_socket_udp  06_socket_udp.c  07_signal_basic  07_signal_basic.c  08_pthread_sync  08_pthread_sync.c  09_pthread_cancel  09_pthread_cancel.c  10_time_rusage  10_time_rusage.c  11_entropy  11_entropy.c  12_shm_posix  12_shm_posix.c  13_spawn_wait  13_spawn_wait.c  14_event_poll  14_event_poll.c  20_mach_self_ports  20_mach_self_ports.c  21_mach_vm  21_mach_vm.c  22_mach_msg_bootstrap  22_mach_msg_bootstrap.c  23_csops_darwin  23_csops_darwin.c  Makefile  README.md
docs/: DAILY_SYSCALL_PLAN.md  LEARNING_PLAN.md  MACH_TRAPS.md  REMAINING_SYSCALLS.md  SYSCALL_SECURITY_WHITEPAPER.md  XNU_AMFI_MECHANISM.md  XNU_MTE_MECHANISM.md  XNU_PPL_MECHANISM.md  XNU_SANDBOX_MECHANISM.md  day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  day-11.md  day-12.md  day-13.md  day-14.md  day-15.md  day-16.md  day-17.md  day-18.md  day-19.md  day-20.md  day-21.md  day-22.md  day-23.md  day-24.md  day-25.md  day-26.md  day-27.md  day-28.md  day-29.md  day-30.md  day-31.md  (+40 more)
docs/android/: APK_HARDENING.md
docs/leocounter/: LEARNING_BOARD.md  MECHANISM.md  (+1 more)
notes/: syscall-getpid.md
samples/apk-hardening/app/src/main/cpp/: CMakeLists.txt  native-guard.cpp
scripts/: gen_syscall_whitepaper.py
xnu/: Makefile  README.md  SOURCE.md
(+1719 files in other folders)
